class ChatContextInterface:
    def __init__(self,):
        pass
